--- a/.env
+++ b/.env
@@ -13,6 +13,9 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+COMPOSER_PATH="%kernel.project_dir%/composer.json"
+OMDB_TOKEN=28c5b7b1
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=f755bb18a5f89204d8c328d56a7c536e
