--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,16 +4,18 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    licence_type: '%env(key:license:json:file:resolve:COMPOSER_PATH)%'
+    licence_type2: '%env(key:type:json:file:resolve:COMPOSER_PATH)%'
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+        # option3:
         bind:
-            $omdbToken: 28c5b7b1
-            $omdbHost: https://www.omdbapi.com
+        #    $omdbToken: 28c5b7b1
+        #    $omdbHost: https://www.omdbapi.com
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -27,3 +29,17 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # option2: Partial declaration of service
+    App\OmdbApi:
+        arguments:
+            $omdbToken: '%env(OMDB_TOKEN)%'
+            #$omdbToken: '%licence_type%'
+            $omdbHost: https://www.omdbapi.com
+
+    # option1: Explicit declaration of service
+    #App\OmdbApi:
+    #    arguments:
+    #        $omdbToken: 28c5b7b1
+    #        $omdbHost: https://www.omdbapi.com
+    #        $omdbClient: '@Symfony\Contracts\HttpClient\HttpClientInterface'
